[package]
name = "path-marker"
version = "0.2.0"
edition = "2021"
authors = ["Cassin01"]
license = "MIT OR Apache-2.0"
description = "A tool to search files"
readme = "README.md"
homepage = "https://github.com/Cassin01/path-marker"
repository = "https://github.com/Casin01/path-marker"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0", features=["derive"]}
confy = "0.5.0"
serde_derive = "1.0.144"
serde = { version = "1.0", features = ["derive"] }
